--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -10,5 +10,6 @@
         <div class="ui error large message">
             {{error.message}}
         </div>
+        <a href="javascript:window.history.go(-1)" class="ui primary button"><i class="ui backward icon"></i> Go Back</a>
     </div>
 {% endblock %}
