--- a/templates/project_form.html.twig
+++ b/templates/project_form.html.twig
@@ -19,8 +19,8 @@
     <form method="POST" onsubmit="javascript:form_disabler(this)">
         <div class="ui form">
             <div class="ui required field basic segment">
-                <label class="ui top attached large label">Name</label>
-                <input placeholder="Project name (max 30 alphanumeric, dash and underscore characters only)" type="text" name="name" value="{{project.name|default(null)}}" {% if is_existing %}disabled="disabled"{% endif %} />
+                <label class="ui top attached large label">Id</label>
+                <input placeholder="Project id (max 30 alphanumeric, dash and underscore characters only)" type="text" name="name" value="{{project.name|default(null)}}" {% if is_existing %}disabled="disabled"{% endif %} />
                 {{ _self.fieldError(errors|default([]), 'name') }}
             </div>
             <div class="ui required field basic segment">
