--- a/templates/admin/user_form.html.twig
+++ b/templates/admin/user_form.html.twig
@@ -8,10 +8,11 @@
             <i class="ui users icon"></i><a href="{{ nav.path('app_admin_users') }}">Users</a> &raquo;
         </small><br />
         <span>
-            <i class="ui user icon"></i>
             {% if is_existing %}
+            <i class="ui user {% if user.admin %}tie{% endif %} icon"></i>
                 Edit user {{user.username}}
             {% else %}
+            <i class="ui user graduate icon"></i>
                 Add new user
             {% endif %}
         </span>
@@ -58,14 +59,13 @@
                 <input placeholder="Email address (max 50 characters)" type="text" name="email" value="{{user.email|default(null)}}" />
                 {{ _self.fieldError(errors|default([]), 'email') }}
             </div>
-            <div class="ui required field basic segment">
-                <label class="ui top attached large label">Roles</label>
-                <select name="roles[]" class="ui multiple dropdown" multiple="multiple">
-                    {% for role in ['ROLE_USER', 'ROLE_ADMIN'] %}
-                        <option value="{{role}}" {% if role in user.roles|default(null) %}selected="selected"{% endif %}>{{role}}</option>
-                    {% endfor %}
-                </select>
-                {{ _self.fieldError(errors|default([]), 'roles') }}
+            <div class="ui field basic segment">
+                <label class="ui top attached large label">Options</label>
+                <div class="ui toggle checkbox">
+                    <input type="hidden" name="admin" value="0" />
+                    <input type="checkbox" name="admin" value="1" {% if user.admin %}checked="checked"{% endif %} />
+                    <label>This user is an administrator</label>
+                </div>
             </div>
             {%  set project_roles = [] %}
             {% for project in projects|psort('title') %}
